# arroyo

./: .dockerignore  .earthlyignore  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Earthfile  README.md  filesystem_redesign.md  justfile  package-lock.json
arroyo/: Cargo.toml  logo.utf8ans
arroyo-api/: Cargo.toml  build.rs
arroyo-api/migrations/: V12__add_committing.sql  V13__backfill_pub_id.sql  V14__unify_job_ids.sql  V15__rename_connections.sql  V16__restart_failed.sql  V1__initial.sql  V2__add_raw_json.sql  V2__add_raw_pipeline_to_source.sql  V3__add_udfs.sql  V8__connector_redesign.sql  V9__add_pub_ids.sql
arroyo-api/queries/: api_queries.sql
arroyo-api/schemas/: kafka_config.json  kafka_table.json
arroyo-api/src/: api_server.rs  auth.rs  cloud.rs  connection_profiles.rs  connection_tables.rs  connections.rs  connectors.rs  job_log.rs  jobs.rs  json_schema.rs  lib.rs  main.rs  metrics.rs  optimizations.rs  pipelines.rs  rest.rs  rest_types.rs  rest_utils.rs  sinks.rs  sources.rs  testers.rs  udfs.rs
arroyo-api/src/connectors/: http.rs  kafka.rs  mod.rs
arroyo-bin/: Cargo.toml
arroyo-bin/src/: main.rs
arroyo-compiler-service/: Cargo.toml
arroyo-compiler-service/src/: lib.rs  main.rs
arroyo-connectors/: Cargo.toml
arroyo-connectors/src/: blackhole.rs  confluent.rs  delta.rs  filesystem.rs  fluvio.rs  http.rs  impulse.rs  kafka.rs  kinesis.rs  lib.rs  mqtt.rs  nexmark.rs  parquet.rs  polling_http.rs  redis.rs  s3.rs  single_file.rs  sse.rs  webhook.rs  websocket.rs
arroyo-connectors/src/blackhole/: mod.rs
arroyo-connectors/src/confluent/: mod.rs
arroyo-connectors/src/filesystem/: mod.rs  source.rs
arroyo-connectors/src/fluvio/: mod.rs  sink.rs  source.rs
arroyo-connectors/src/impulse/: mod.rs  operator.rs
arroyo-connectors/src/kafka/: mod.rs  table.json
arroyo-connectors/src/kinesis/: mod.rs
arroyo-connectors/src/polling_http/: mod.rs
arroyo-connectors/src/preview/: mod.rs  operator.rs
arroyo-connectors/src/redis/: mod.rs
arroyo-connectors/src/single_file/: mod.rs  sink.rs  source.rs
arroyo-connectors/src/sse/: connector.rs  mod.rs  operator.rs
arroyo-connectors/src/webhook/: mod.rs  operator.rs
arroyo-connectors/src/websocket/: mod.rs
arroyo-controller/: Cargo.toml  build.rs
arroyo-controller/queries/: controller_queries.sql
arroyo-controller/src/: compiler.rs  lib.rs  main.rs  scheduler.rs
arroyo-controller/src/job_controller/: checkpoint_state.rs  checkpointer.rs  comitting_state.rs  mod.rs  subtask_state.rs
arroyo-controller/src/schedulers/: embedded.rs  kubernetes.rs  mod.rs  nomad.rs
arroyo-controller/src/states/: checkpoint_stopping.rs  compiling.rs  finishing.rs  mod.rs  recovering.rs  rescaling.rs  restarting.rs  running.rs  scheduling.rs  stopping.rs
arroyo-datastream/: Cargo.toml
arroyo-datastream/src/: lib.rs  logical.rs
arroyo-formats/: Cargo.toml
arroyo-formats/src/: avro.rs  json.rs  lib.rs  old.rs
arroyo-formats/src/serialize/: mod.rs
arroyo-node/: Cargo.toml
arroyo-node/src/: main.rs
arroyo-operator/: Cargo.toml
arroyo-operator/src/: connector.rs  context.rs  inq_reader.rs  lib.rs  operator.rs
arroyo-operator/src/operators/: console.rs  impulse.rs  mod.rs  projection.rs  window.rs
arroyo-rpc/: Cargo.toml  buf.gen.yaml  buf.yaml  build.rs  go.mod  go.sum  main.go
arroyo-rpc/proto/: api.proto  rpc.proto
arroyo-rpc/rest/proto/: api.pb.go  api.pb.gw.go  api_grpc.pb.go  rpc.pb.go  rpc_grpc.pb.go
arroyo-rpc/src/: df.rs  formats.rs  lib.rs  public_ids.rs  schema_resolver.rs  types.rs  var_str.rs
arroyo-rpc/src/api_types/: checkpoints.rs  connections.rs  metrics.rs  mod.rs  pipelines.rs  udfs.rs
arroyo-server-common/: Cargo.toml
arroyo-server-common/src/: lib.rs  shutdown.rs
arroyo-sql/: Cargo.toml
arroyo-sql-macro/: Cargo.toml
arroyo-sql-macro/src/: connectors.rs  lib.rs
arroyo-sql-testing/: Cargo.toml
arroyo-sql-testing/golden_outputs/: aggregates.json  filter_updating_aggregates.json  hourly_by_event_type.json  month_loose_watermark.json  month_tight_watermark.json  most_active_driver_last_hour.json  most_active_driver_last_hour_unaligned.json  most_active_driver_last_minute_unaligned.json  offset_impulse_join.json  outer_join.json  session_window.json  tight_watermark.json  union.json  updating_right_join.json  windowed_inner_join.json  windowed_outer_join.json
arroyo-sql-testing/inputs/: impulse.json
arroyo-sql-testing/src/: full_query_tests.rs  lib.rs  smoke_tests.rs
arroyo-sql/src/: avro.rs  code_gen.rs  expressions.rs  external.rs  json_schema.rs  lib.rs  operators.rs  optimizations.rs  pipeline.rs  plan_graph.rs  schemas.rs  tables.rs  test.rs  types.rs
arroyo-state/: Cargo.toml
arroyo-state/src/: arrow.rs  checkpoint_state.rs  committing_state.rs  lib.rs  metrics.rs  parquet.rs  subtask_state.rs  tables.rs
arroyo-state/src/judy/: backend.rs  mod.rs
arroyo-state/src/schemas/: mod.rs
arroyo-state/src/tables/: expiring_time_key_map.rs  global_keyed_map.rs  key_time_multi_map.rs  keyed_map.rs  mod.rs  table_manager.rs  time_key_map.rs
arroyo-storage/: Cargo.toml
arroyo-storage/src/: aws.rs  lib.rs
arroyo-worker/: Cargo.toml  build.rs
arroyo-worker/src/: arrow.rs  engine.rs  formats.rs  inq_reader.rs  lib.rs  main.rs  metrics.rs  network_manager.rs  old.rs  operator.rs  process_fn.rs  stream_node.rs
arroyo-worker/src/arrow/: join_with_expiration.rs  mod.rs  session_aggregating_window.rs  sliding_aggregating_window.rs  (+1 more)
arroyo/src/: main.rs  query.rs
build_dir/: .gitignore  Cargo.toml
build_dir/pipeline/: Cargo.toml
build_dir/types/: Cargo.toml
build_dir/udfs/: Cargo.toml
build_dir/wasm-fns/: Cargo.toml
crates/arroyo-api/: Cargo.toml  build.rs
crates/arroyo-bin/: Cargo.toml
crates/arroyo-compiler-service/: Cargo.toml
crates/arroyo-connectors/: Cargo.toml  build.rs
crates/arroyo-controller/: Cargo.toml  build.rs
crates/arroyo-datastream/: Cargo.toml
crates/arroyo-formats/: Cargo.toml
integ/: Cargo.toml
integ/src/: main.rs
(+990 files in other folders)
