[workspace]
members = [
    "crates/arroyo",
    "crates/arroyo-api",
    "crates/arroyo",
    "crates/arroyo-compiler-service",
    "crates/arroyo-connectors",
    "crates/arroyo-controller",
    "crates/arroyo-datastream",
    "crates/arroyo-planner",
    "crates/arroyo-formats",
    "crates/arroyo-metrics",
    "crates/arroyo-node",
    "crates/arroyo-openapi",
    "crates/arroyo-operator",
    "crates/arroyo-rpc",
    "crates/arroyo-server-common",
    "crates/arroyo-sql-testing",
    "crates/arroyo-state",
    "crates/arroyo-storage",
    "crates/arroyo-types",
    "crates/arroyo-udf/arroyo-udf-common",
    "crates/arroyo-udf/arroyo-udf-plugin",
    "crates/arroyo-udf/arroyo-udf-host",
    "crates/arroyo-udf/arroyo-udf-macros",
    "crates/arroyo-udf/arroyo-udf-python",
    "crates/arroyo-worker",
    "crates/integ",
]

resolver = "2"

[workspace.dependencies]
tonic = { version = "0.13", features = ["zstd", "transport", "tls-ring", "tls-native-roots"] }
tonic-build = { version = "0.13" }
tonic-web = { version = "0.13" }
tonic-reflection = { version = "0.13" }
tower = { version = "0.5" }
tower-http = {version = "0.6"}
axum = { version = "0.7" }
utoipa = { version = "4" }

arrow = { version = "55.2.0" }
arrow-ord = { version = "55.2.0" }
arrow-array = { version = "55.2.0" }
arrow-schema = { version = "55.2.0" }
arrow-json = { version = "55.2.0" }
object_store = { version = "0.12.3" }
parquet = { version = "55.2.0" }
ahash = { version = "=0.8.7" }
datafusion = { version = "48.0.1" }
datafusion-common = { version = "48.0.0" }
datafusion-proto = { version = "48.0.0" }
datafusion-functions = { version = "48.0.0", features = ["crypto_expressions"] }
datafusion-functions-window = {version = "48.0.0"}
datafusion-functions-json = { version = "0.48.0" }
deltalake = { version = "0.27.0" }
delta_kernel = { version = "0.13.0" }
cornucopia = { version = "0.9.0" }
cornucopia_async = {version = "0.6.0"}
deadpool-postgres = "0.14"
prost = { version = "0.13", features = ["no-recursion-limit"] }
prost-reflect = "0.14.0"
prost-build = {version = "0.13" }
prost-types = "0.13"
aws-config = "1.5.13"
reqwest = "0.12"
rusqlite = "0.31"
apache-avro = "0.18.0"
k8s-openapi = "0.24.0"
sqlparser = "0.55.0"
petgraph = "0.8"
rand = "0.9"
prometheus = "0.14.0"
rustls = "0.23.27"
tokio-rustls = "0.26.2"
rustls-pemfile = "2.2.0"
webpki-roots = "1.0.0"

[profile.release]
debug = 1

[profile.dev]
split-debuginfo = "unpacked"

[patch.crates-io]
typify = { git = 'https://github.com/ArroyoSystems/typify.git', branch = 'arroyo' }
parquet = {git = 'https://github.com/ArroyoSystems/arrow-rs', branch = '55.2.0/parquet'}
arrow-json = {git = 'https://github.com/ArroyoSystems/arrow-rs', branch = '55.2.0/json'}
datafusion = {git = 'https://github.com/ArroyoSystems/arrow-datafusion', branch = 'partitioned_by'}
datafusion-common = {git = 'https://github.com/ArroyoSystems/arrow-datafusion', branch = 'partitioned_by'}
datafusion-execution = {git = 'https://github.com/ArroyoSystems/arrow-datafusion', branch = 'partitioned_by'}
datafusion-expr = {git = 'https://github.com/ArroyoSystems/arrow-datafusion', branch = 'partitioned_by'}
datafusion-physical-expr = {git = 'https://github.com/ArroyoSystems/arrow-datafusion', branch = 'partitioned_by'}
datafusion-physical-plan = {git = 'https://github.com/ArroyoSystems/arrow-datafusion', branch = 'partitioned_by'}
datafusion-proto = {git = 'https://github.com/ArroyoSystems/arrow-datafusion', branch = 'partitioned_by'}
datafusion-functions = {git = 'https://github.com/ArroyoSystems/arrow-datafusion', branch = 'partitioned_by'}
datafusion-functions-window = {git = 'https://github.com/ArroyoSystems/arrow-datafusion', branch = 'partitioned_by'}

sqlparser = { git = "https://github.com/ArroyoSystems/sqlparser-rs", branch = "partitioned_by" }

cornucopia_async = { git = "https://github.com/ArroyoSystems/cornucopia", branch = "sqlite" }
cornucopia = { git = "https://github.com/ArroyoSystems/cornucopia", branch = "sqlite" }
jiter = {git = "https://github.com/ArroyoSystems/jiter", branch = "disable_python" }