[workspace]
members = [
    "crates/arroyo",
    "crates/arroyo-api",
    "crates/arroyo-compiler-service",
    "crates/arroyo-connectors",
    "crates/arroyo-controller",
    "crates/arroyo-datastream",
    "crates/arroyo-planner",
    "crates/arroyo-formats",
    "crates/arroyo-metrics",
    "crates/arroyo-node",
    "crates/arroyo-openapi",
    "crates/arroyo-operator",
    "crates/arroyo-rpc",
    "crates/arroyo-server-common",
    "crates/arroyo-sql-testing",
    "crates/arroyo-state",
    "crates/arroyo-state-protocol",
    "crates/arroyo-storage",
    "crates/arroyo-types",
    "crates/arroyo-udf/arroyo-udf-common",
    "crates/arroyo-udf/arroyo-udf-plugin",
    "crates/arroyo-udf/arroyo-udf-host",
    "crates/arroyo-udf/arroyo-udf-macros",
    "crates/arroyo-udf/arroyo-udf-python",
    "crates/arroyo-worker",
    "crates/integ",
]

resolver = "2"

[workspace.dependencies]
tonic = { version = "0.14", features = ["zstd", "transport", "tls-ring", "tls-native-roots"] }
tonic-build = { version = "0.14" }
tonic-prost = { version = "0.14" }
tonic-prost-build = { version = "0.14" }
tonic-web = { version = "0.14" }
tonic-reflection = { version = "0.14" }
tower = { version = "0.5" }
tower-http = {version = "0.6"}
axum = { version = "0.7" }
utoipa = { version = "4" }

arrow = { version = "57.0.0" }
arrow-ord = { version = "57.0.0" }
arrow-array = { version = "57.0.0" }
arrow-schema = { version = "57.0.0" }
arrow-json = { version = "57.0.0" }
object_store = { version = "0.12.3" }
parquet = { version = "57.0.0" }
ahash = { version = "=0.8.7" }
datafusion = { version = "51.0.0" }
datafusion-common = { version = "51.0.0" }
datafusion-proto = { version = "51.0.0" }
datafusion-functions = { version = "51.0.0", features = ["crypto_expressions"] }
datafusion-functions-window = { version = "51.0.0" }
datafusion-functions-json = { version = "0.51.0" }
datafusion-expr = { version = "51.0.0" }
deltalake = { version = "0.30.0" }
delta_kernel = { version = "0.19.0" }
cornucopia = { version = "0.9.0" }
cornucopia_async = {version = "0.6.0"}
deadpool-postgres = "0.14"
prost = { version = "0.14", features = ["no-recursion-limit"] }
prost-reflect = "0.16.0"
prost-build = { version = "0.14" }
prost-types = "0.14"
aws-config = "=1.8.0"
reqwest = "0.12"
rusqlite = "0.31"
apache-avro = "0.18.0"
k8s-openapi = "0.24.0"
sqlparser = "0.55.0"
petgraph = "0.8"
rand = "0.9"
prometheus = "0.14.0"
rustls = "0.23.27"
tokio-rustls = "0.26.2"
rustls-pemfile = "2.2.0"
webpki-roots = "1.0.0"
bincode = "2.0.0-rc.3"
anyhow = "1.0.82"
async-trait = "0.1.80"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = "0.4"
dirs = "6"
dlopen2 = { version = "0.7", features = ["derive"] }
flate2 = "1.0.30"
futures = "0.3.30"
http = "1"
itertools = "0.14.0"
lazy_static = "1.4.0"
once_cell = "1.17.1"
regex = "1.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
syn = { version = "2", features = ["full"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-time-0_3", "with-uuid-1"] }
tokio-stream = { version = "0.1", features = ["full"] }
toml = "0.8.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
typify = "0.0.13"
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }

[profile.release]
debug = 1

[profile.dev]
split-debuginfo = "unpacked"

[patch.crates-io]
typify = { git = 'https://github.com/ArroyoSystems/typify.git', branch = 'arroyo' }

sqlparser = { git = "https://github.com/ArroyoSystems/sqlparser-rs", branch = "0.55.0/arroyo" }

cornucopia_async = { git = "https://github.com/ArroyoSystems/cornucopia", branch = "sqlite" }
cornucopia = { git = "https://github.com/ArroyoSystems/cornucopia", branch = "sqlite" }
