[package]
name = "arroyo-api"
version = "0.1.0"
edition = "2021"

[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-server-common = { path = "../arroyo-server-common" }
arroyo-sql = { path = "../arroyo-sql" }
arroyo-datastream = { path = "../arroyo-datastream" }
arroyo-state = { path = "../arroyo-state" }

tonic = "0.8"
tonic-reflection = "0.5"
prost = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.12"
tonic-web = "0.4.0"
rand = "0.8"
rand_chacha = "0.3"
async-trait = "0.1"
chrono = "0.4"
once_cell = "1"

arrow = { version = "34.0.0", default-features = false }

bincode = { version = "2.0.0-rc.3", features = ["serde"]}
petgraph = {version = "0.6", features = ["serde-1"]}

http = "0.2"
tower-http = {version = "0.3", features = ["trace", "fs", "cors"]}
axum = "0.6.12"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

argon2 = "0.4"

# logging
tracing = "0.1"
anyhow = "1.0.70"

# json-schema support
typify = "0.0.10"
schemars = "0.8"

# metric querying
prometheus-http-query = "0.6.5"
reqwest = "0.11"
base64 = '0.13'

# codegen
syn = {version = "1", features = ["full"]}
quote = "1"
proc-macro2 = "1"
# source testing
rdkafka = { version = "0.28", features = ["cmake-build",  "ssl-vendored", "sasl"] }

# postgres
refinery = { version = "0.8", features = [ "postgres" ]}
postgres-types = { version = "*", features = ["derive"] }
tokio-postgres = { version = "*", features = ["with-serde_json-1", "with-time-0_3"] }
deadpool-postgres = { version = "0.10" }
futures = "0.3"
time = "0.3"
cornucopia_async = { version = "0.4", features = ["with-serde_json-1"] }
jwt-simple = "0.11.4"

[build-dependencies]
cornucopia = { version = "0.9" }
postgres = "0.19.5"
arroyo-types = { path = "../arroyo-types" }
