[package]
name = "arroyo-api"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []

[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-server-common = { path = "../arroyo-server-common" }
arroyo-connectors = { path = "../arroyo-connectors" }
arroyo-sql = { path = "../arroyo-sql" }
arroyo-datastream = { path = "../arroyo-datastream" }
arroyo-state = { path = "../arroyo-state" }

tonic = { workspace = true }
tonic-reflection = { workspace = true }
tonic-web = { workspace = true }
prost = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.12"
tower = "0.4"
rand = "0.8"
rand_chacha = "0.3"
async-trait = "0.1"
chrono = "0.4"
once_cell = "1"

arrow = { workspace = true }
arrow-schema = {workspace = true, features = ["serde"]}

bincode = { version = "2.0.0-rc.3", features = ["serde"]}
petgraph = {version = "0.6", features = ["serde-1"]}

http = "0.2"
tower-http = {version = "0.4", features = ["trace", "fs", "cors", "validate-request", "auth"]}
axum = {version = "0.6.12", features = ["headers", "tokio", "macros"]}
axum-extra = "0.7.4"
thiserror = "1.0.40"
utoipa = "3"
utoipa-swagger-ui = { version = "3", features = ["axum"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

argon2 = "0.5"

# logging
tracing = "0.1"
anyhow = "1.0.70"

# json-schema support
typify = "0.0.13"
schemars = "0.8"

# metric querying
prometheus-http-query = "0.6.5"
reqwest = "0.11"
base64 = '0.21'

# codegen
syn = {version = "2", features = ["full"]}
quote = "1"
proc-macro2 = "1"

# postgres
postgres-types = { version = "*", features = ["derive"] }
tokio-postgres = { version = "*", features = ["with-serde_json-1", "with-time-0_3", "with-uuid-1"] }
deadpool-postgres = { version = "0.10" }
futures = "0.3"
futures-util = "0.3.28"
time = "0.3"
cornucopia_async = { version = "0.4", features = ["with-serde_json-1"] }
jwt-simple = "0.11.4"
uuid = "1.3.3"
regress = "0.6.0"
apache-avro = "0.16.0"

[build-dependencies]
cornucopia = { version = "0.9" }
postgres = "0.19.5"
arroyo-types = { path = "../arroyo-types" }
utoipa = "3"
