[package]
name = "arroyo-bin"
version = "0.10.0-dev"
edition = "2021"

[features]
kafka-sasl = ["arroyo-connectors/kafka-sasl", "arroyo-worker/kafka-sal"]
k8s  = ["arroyo-controller/k8s"]

[dependencies]
arroyo-types = { path ="../arroyo-types" }
arroyo-connectors = { path ="../arroyo-connectors" }
arroyo-controller = { path = "../arroyo-controller" }
arroyo-api = { path = "../arroyo-api" }
arroyo-worker = { path = "../arroyo-worker" }
arroyo-server-common = { path = "../arroyo-server-common" }

clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"
tracing = "0.1"

postgres-types = { version = "*", features = ["derive"] }
tokio-postgres = { version = "*", features = ["with-serde_json-1", "with-time-0_3", "with-uuid-1"] }
deadpool-postgres = { version = "0.10" }
uuid = { version = "1.7.0", features = ["v4"] }
