[package]
name = "arroyo-compiler-service"
version = "0.4.1"
edition = "2021"

[dependencies]
arroyo-types = { path ="../arroyo-types" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-server-common = { path = "../arroyo-server-common" }

tonic = "0.8"
tonic-reflection = "0.5"
prost = "0.11"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
object_store = {version = "0.5.0", features = ["aws", "aws_profile"]}
