[package]
name = "arroyo-compiler-service"
version = "0.5.1"
edition = "2021"

[dependencies]
arroyo-types = { path ="../arroyo-types" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-server-common = { path = "../arroyo-server-common" }

tonic = {workspace = true}
prost = "0.11"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
object_store = {version = "0.5.0", features = ["aws", "aws_profile"]}
