[package]
name = "arroyo-compiler-service"
version = "0.9.0"
edition = "2021"

[dependencies]
arroyo-types = { path ="../arroyo-types" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-server-common = { path = "../arroyo-server-common" }
arroyo-storage = { path = "../arroyo-storage" }

tonic = {workspace = true}
prost = "0.11"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1.0.75"
serde_json = "1.0.106"
