[package]
name = "arroyo-connectors"
version = "0.3.0"
edition = "2021"

[features]
default = []
kafka-sasl = ["rdkafka/sasl", "rdkafka/ssl-vendored"]

[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-datastream = { path = "../arroyo-datastream" }

arrow = { version = "39.0.0", default-features = false }
arrow-schema = {version = "39.0", features = ["serde"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }

typify = "0.0.13"
schemars = "0.8"

tonic = "0.8"

# connector dependencies
rdkafka = { version = "0.28", features = ["cmake-build"] }
anyhow = "1.0.71"
tracing = "0.1.37"
regress = "0.6.0"
eventsource-client = "0.11.0"
futures = "0.3.28"
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
