[package]
name = "arroyo-connectors"
version = "0.7.0"
edition = "2021"

[features]
default = []
kafka-sasl = ["rdkafka/sasl", "rdkafka/ssl-vendored"]

[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-storage = { path = "../arroyo-storage" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-datastream = { path = "../arroyo-datastream" }

chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }

typify = "0.0.13"
schemars = "0.8"

tonic = {workspace = true}

# connector dependencies
rdkafka = { version = "0.33", features = ["cmake-build"] }
anyhow = "1.0.71"
tracing = "0.1.37"
regress = "0.6.0"
eventsource-client = "0.11.0"
futures = "0.3.28"
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
axum = {version = "0.6.12"}
reqwest = "0.11.20"
rand = "0.8.5"
base64 = "0.13.1"
redis = { version = "0.23.3", features = ["default", "tokio-rustls-comp", "cluster-async", "connection-manager"] }
