[package]
name = "arroyo-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-macro = { path = "../arroyo-macro" }
arroyo-datastream = { path = "../arroyo-datastream" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-state = { path = "../arroyo-state" }
arroyo-sql = { path = "../arroyo-sql" }
arroyo-server-common = { path = "../arroyo-server-common" }

tonic = "0.8"
tonic-reflection = "0.5"
prost = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.12"
tonic-web = "0.4.0"
rand = "0.8"
bincode = { version = "2.0.0-rc.3", features = ["serde"]}
petgraph = {version = "0.6", features = ["serde-1"]}
quote = "1"
proc-macro2 = "1"
syn = {version = "1", features = ["full"]}
fork = "0.1"
prometheus = "0.13"
async-trait = "0.1"
lazy_static = "1.4.0"
chrono = "0.4"

arrow-schema = {version = "31.0", features = ["serde"]}
object_store = {version = "0.5.5", features = ["aws"]}

serde = "1"

anyhow = "1.0.70"

# json-schema support
typify = "0.0.10"
serde_json = "1.0"
schemars = "0.8"

# logging
tracing = "0.1"

# SQL
postgres-types = { version = "*", features = ["derive"] }
tokio-postgres = { version = "*", features = ["with-serde_json-1", "with-time-0_3"] }
deadpool-postgres = { version = "0.10" }
futures = "0.3"
time = "0.3"
cornucopia_async = { version = "0.4", features = ["with-serde_json-1"] }
thiserror = "1.0.40"
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["json"] }

[build-dependencies]
cornucopia = { version = "0.9" }
postgres = "0.19.5"
arroyo-types = { path = "../arroyo-types" }
