[package]
name = "arroyo-controller"
version = "0.7.0"
edition = "2021"

[features]
default = []
kafka-sasl = []
k8s = ["kube", "k8s-openapi", "serde_yaml"]

[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-datastream = { path = "../arroyo-datastream" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-state = { path = "../arroyo-state" }
arroyo-storage = { path = "../arroyo-storage" }
arroyo-sql = { path = "../arroyo-sql" }
arroyo-server-common = { path = "../arroyo-server-common" }

tonic = {workspace = true}
tonic-reflection = {workspace = true}

prost = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.12"
rand = "0.8"
bincode = { version = "2.0.0-rc.3", features = ["serde"]}
petgraph = {version = "0.6", features = ["serde-1"]}
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2.4"
syn = {version = "2", features = ["full"]}
prometheus = "0.13"
async-trait = "0.1"
lazy_static = "1.4.0"
chrono = "0.4"

arrow-schema = {workspace = true}

serde = "1"

anyhow = "1.0.70"

# Kubernetes
kube = { version = "0.84", features = ["runtime", "derive"], optional = true }
k8s-openapi = { version = "0.18.0", features = ["v1_26"], optional = true }
serde_yaml = {version = "0.9", optional = true}

# json-schema support
serde_json = "1.0"

# logging
tracing = "0.1"

# SQL
postgres-types = { version = "*", features = ["derive"] }
tokio-postgres = { version = "*", features = ["with-serde_json-1", "with-time-0_3", "with-uuid-1"] }
deadpool-postgres = { version = "0.10" }
futures = "0.3"
time = "0.3"
cornucopia_async = { version = "0.4", features = ["with-serde_json-1"] }
thiserror = "1.0.40"
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["json"] }
uuid = "1.3.3"
async-stream = "0.3.5"

[build-dependencies]
cornucopia = { version = "0.9" }
postgres = "0.19.5"
arroyo-types = { path = "../arroyo-types" }
