[package]
name = "arroyo-datastream"
version = "0.7.0"
edition = "2021"


[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-macro = { path = "../arroyo-macro" }
arroyo-rpc = { path = "../arroyo-rpc" }
dyn-clone = "1.0.11"
petgraph = {version = "0.6", features = ["serde-1"]}
serde = {version = "1", features = ["derive"]}
syn = {version = "2", features = ["full"]}
quote = "1"
proc-macro2 = "1"
bincode = { version = "2.0.0-rc.3", features = ["serde"]}
rand = "0"
toml = "0.7"

tokio = "1"
tonic = {workspace = true}
anyhow = "1.0.70"
prost = "0.11"
regex = "1.9.5"
