[package]
name = "arroyo-node"
version = "0.4.0"
edition = "2021"

[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-server-common = { path = "../arroyo-server-common" }

tonic = "0.8"
tonic-reflection = "0.5"
prost = "0.11"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
fork = "0.1"
rand = "0.8"
local-ip-address = "0.5"
lazy_static = "1.4.0"
prometheus = "0.13.3"
