[package]
name = "arroyo-node"
version = "0.7.0"
edition = "2021"

[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-server-common = { path = "../arroyo-server-common" }

tonic = { workspace = true }
tonic-reflection = { workspace = true }
prost = "0.11"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
fork = "0.1"
rand = "0.8"
local-ip-address = "0.5"
lazy_static = "1.4.0"
prometheus = "0.13.3"
tokio-stream = "0.1.14"
anyhow = "1.0.72"
