[package]
name = "arroyo-rpc"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arroyo-types = { path = "../arroyo-types" }

tonic = { workspace = true }
prost = "0.11"
tokio = { version = "1", features = ["full"] }
bincode = "2.0.0-rc.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
nanoid = "0.4"
utoipa = "3"

[build-dependencies]
tonic-build = { workspace = true }
