[package]
name = "arroyo-sql-macro"
version = "0.4.1"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
arroyo-sql = { path = "../arroyo-sql" }
arroyo-controller = { path = "../arroyo-controller" }
arroyo-datastream = { path = "../arroyo-datastream" }
arroyo-rpc = { path= "../arroyo-rpc" }
arroyo-connectors = { path = "../arroyo-connectors" }

syn = {version = "1.0", features = ["full"]}
quote = "1.0"
proc-macro2 = "1"
