[package]
name = "arroyo-sql-macro"
version = "0.6.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
arroyo-sql = { path = "../arroyo-sql" }
arroyo-datastream = { path = "../arroyo-datastream" }
arroyo-connectors = { path = "../arroyo-connectors" }

syn = {version = "2", features = ["full"]}
quote = "1.0"
proc-macro2 = "1"
serde_json = "1"

runtime-macros-derive = "0.6.0"
