[package]
name = "arroyo-sql"
version = "0.9.1"
edition = "2021"


[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-rpc = {path = "../arroyo-rpc"}
arroyo-datastream = { path = "../arroyo-datastream" }
arroyo-connectors = { path = "../arroyo-connectors" }
arroyo-formats = { path = "../arroyo-formats" }

datafusion = "31.0"
datafusion-expr = "31.0"
datafusion-common = "31.0"
arrow-schema = {workspace = true }
serde = {version = "1", features = ["derive"]}
serde_json = "1"

bincode = { version = "2.0.0-rc.3", features = ["serde"]}
petgraph = "0.6"
tokio = "1.27"
quote = "1.0"
regex = "1"
arrow = { workspace = true }
anyhow = {version = "1.0.70", features = ["backtrace"]}

proc-macro2 = "1"
syn = {version = "2", features = ["full", "parsing", "extra-traits"]}
tracing = "0.1.37"

typify = "0.0.13"
schemars = "0.8"
serde_json_path = "0.6.3"
apache-avro = "0.16.0"
prettyplease = "0.2.4"
unicase = "2.7.0"
toml = "0.8.8"
