[package]
name = "arroyo-state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-metrics = { path = "../arroyo-metrics" }

anyhow = "1.0"
tracing = "0.1"
rand = "0.8"
bincode = "2.0.0-rc.1"
tokio = { version = "1", features = ["full", "tracing"] }
arrow = "34.0.0"
arrow-array = "34.0.0"
arrow-schema = "34.0.0"
parquet = "34.0.0"
async-trait = "0.1.57"
async-stream = "0.3.3"
ctor = "0.1"
once_cell = "1.14.0"
futures = "0.3"
bytes = "1.2"
prost = "0.11"
prometheus = '0.13'
rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"

[dev-dependencies]
test-case = "2.2"
