[package]
name = "arroyo-state"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-metrics = { path = "../arroyo-metrics" }
arroyo-storage = { path = "../arroyo-storage" }

anyhow = "1.0"
backoff = "0.4.0"
tracing = "0.1"
rand = "0.8"
bincode = "2.0.0-rc.3"
tokio = { version = "1", features = ["full", "tracing"] }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
parquet = { workspace = true }
async-trait = "0.1.68"
async-stream = "0.3.4"
ctor = "0.2"
once_cell = "1.17.1"
futures = "0.3"
bytes = "1.4"
prost = "0.11"
prometheus = '0.13'
tonic = {workspace = true}
lazy_static = "1.4.0"

[dev-dependencies]
test-case = "3"
