[package]
name = "arroyo-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-macro = { path = "../arroyo-macro" }
arroyo-state = { path = "../arroyo-state" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-server-common = { path = "../arroyo-server-common" }
arroyo-metrics =  { path = "../arroyo-metrics" }

crossbeam-queue = "0.3"
rand = "0.8"
bincode = "2.0.0-rc.3"
wasmtime = "1.0"
lazy_static = "1.4.0"
petgraph = "0.6"
chrono = "0.4"
rdkafka = { version = "0.28", features = ["cmake-build",  "ssl-vendored", "sasl"] }
rdkafka-sys = "=4.2.0"
prometheus = {version = "0.13", features = ["process"] }
futures = "0.3"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = "0.1.68"
async-stream = "0.3.4"
stacker = "0.1"
ctor = "0.1"
bytes = "1.4"
once_cell = "1.17.1"
local-ip-address = "0.5"
serde_json = "1.0"
serde = "1.0"

tonic = "0.8"
prost = "0.11"

#logging
tracing = "0.1"
governor = "0.5.1"

[dev-dependencies]
test-case = "2.2"
