[package]
name = "arroyo-worker"
version = "0.3.0"
edition = "2021"

[features]
default = []
kafka-sasl = ["rdkafka/sasl", "rdkafka/ssl-vendored"]

[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-macro = { path = "../arroyo-macro" }
arroyo-state = { path = "../arroyo-state" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-server-common = { path = "../arroyo-server-common" }
arroyo-metrics =  { path = "../arroyo-metrics" }

crossbeam-queue = "0.3"
rand = "0.8"
bincode = "2.0.0-rc.3"
wasmtime = "1.0"
lazy_static = "1.4.0"
petgraph = "0.6"
chrono = "0.4"
prometheus = {version = "0.13", features = ["process"] }
futures = "0.3"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = "0.1.68"
async-stream = "0.3.4"
stacker = "0.1"
ctor = "0.1"
bytes = "1.4"
once_cell = "1.17.1"
local-ip-address = "0.5"
serde_json = "1.0"
serde_json_path = "0.6.0"
serde = "1.0"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
ordered-float = "3"

tonic = "0.8"
prost = "0.11"

#logging
tracing = "0.1"
governor = "0.5.1"

# connectors
rdkafka = { version = "0.28", features = ["cmake-build"] }
rdkafka-sys = "=4.2.0"
eventsource-client = "0.11.0"
regex = "1.8.1"
anyhow = "1.0.71"
typify = "0.0.13"
regress = "0.6.0"
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }

[dev-dependencies]
test-case = "2.2"
